<resources>
    <string name="app_name">FirebaseAUthUI</string>
    <string name="mssg_bienvenida">Bienvenido, partner a 2CatsAmigurumi</string>
    <string name="menu_title_sign_out">Cerrar Sesión</string>
    <string name="mssg_sign_out_success">Sesión cerrada con éxito</string>
    <string name="mssg_sign_out_failure">Problemas al cerrar sesión</string>
    <string name="mssg_despedida">Hasta pronto!</string>
    <string name="mssg_error_no_network">Error de conexión</string>
    <string name="mssg_error_codigo_error">Código de error: ${it.errorCode}</string>
    <string name="tv_cargando">Cargando</string>
    <string name="efab_text_create">CREAR</string>
    <string name="mssg_error_consultar_datos">Fallo al consultar los datos</string>
    <string name="hint_name_product">Nombre del producto</string>
    <string name="hint_description_product">Descripción del producto</string>
    <string name="hint_precio">Precio</string>
    <string name="hint_quantity">Cantidad</string>
    <string name="mssg_producto_insertado">Producto añadido con éxito</string>
    <string name="mssg_producto_no_insertado">El producto no ha podido ser añadido</string>
    <string name="mssg_producto_eliminado">El producto ha sido eliminado</string>
    <string name="mssg_producto_eliminado_error">Fallo al eliminar un producto.</string>
    <string name="mssg_producto_actualizado">Producto actualizado correctamente</string>
    <string name="mssg_producto_no_actualizado">Error al actualizar</string>
    <string name="mssg_imagen_no_insertada">La imagen no ha podido ser registrada. Edite su producto.</string>
    <string name="Product_empty_cart">Carrito vacío</string>
    <string name="product_preview_cart">Ver carrito</string>
    <string name="cart_buy_name">Carrito de compra</string>
    <string name="efab_pay">PAGAR</string>
    <string name="cart_name_add_cart">AÑADIR AL CARRITO</string>
    <string name="cart_description_text">Descrición del producto</string>
    <string name="text_test_avaiables">Disponibles: %1$d</string>
    <string name="text_test_total">Total: %1$.2f€  (%2$d x %3$.2f€)</string>
    <string name="ib_description_remove">Quitar productos del carrito</string>
    <string name="ib_description_add">Añadir cantidad de productos al carrito</string>
    <string name="product_full_cart">Total: %1$.2f€</string>
    <string name="btn_follow_package">LOCALIZAR</string>
    <string name="order_id">ID: %1$s</string>
    <string name="order_status">Estado: %1$s</string>
    <string name="order_products">Productos: Patrón Mariquita Lola, patrón zorrito, patrones ranitas</string>
    <string name="order_price_total">Total: %1$.2f€</string>
    <string name="chip_text_help">¿Necesitas ayuda?</string>
    <string name="toast_order_correct_done">Pedido realizado correctamente</string>
    <string name="toast_order_incorrect_done">No se ha podido realizar el pedido.</string>
    <string name="order_status_ordered">¡Pedido realizado!</string>
    <string name="order_status_preparing">Preparando su pedido...</string>
    <string name="order_status_sent">¡Su pedido ha sido enviado!</string>
    <string name="order_status_in_distribution">¡Su pedido está en reparto!</string>
    <string name="order_status_delivered">¡Pedido entregado!</string>
    <string name="order_status_error">Ha habido problemas con su pedido</string>
    <string name="toast_error_consult_location">Error al consultar la localización</string>
    <string name="order_title">Historial de compras</string>
    <string name="track_title">Localización pedido</string>
    <string name="toast_status_changed">Estado cambiado correctamente</string>
    <string name="toast_status_error">Error al cambiar estado del pedido</string>
    <string name="text_input_layout_chat">Escribe tu mensaje</string>
    <string name="snackbar_error_chat">Fallo al cargar el chat</string>
    <string name="snackbar_error_borrar">El mensaje NO ha podido ser borrado</string>
    <string name="snackbar_mensaje_borrado">Mensaje borrado correctamente</string>
    <string name="chat_title">Soporte pedidos</string>
</resources>