<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:padding="@dimen/common_padding_min">
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilName"
        android:layout_marginTop="@dimen/common_padding_min"
        android:layout_width="@dimen/padding_none"
        android:layout_height="wrap_content"
        android:hint="@string/hint_name_product"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ivImgPreview"
        style="@style/ThemeOverlay.Material3.AutoCompleteTextView.OutlinedBox.Dense"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textNoSuggestions"/>
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilDescription"
        android:layout_width="@dimen/padding_none"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/common_padding_min"
        android:hint="@string/hint_description_product"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tilName"
        style="@style/ThemeOverlay.Material3.AutoCompleteTextView.OutlinedBox.Dense"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textNoSuggestions"/>
    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_marginTop="@dimen/common_padding_min"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tilDescription"
        android:orientation="horizontal"
        >
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilPrice"
            android:layout_width="@dimen/padding_none"
            android:layout_height="wrap_content"
            android:layout_weight="50"
            android:layout_marginEnd="@dimen/common_padding_normal"
            android:hint="@string/hint_precio"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tilName"
            app:prefixText="€"
            style="@style/ThemeOverlay.Material3.AutoCompleteTextView.OutlinedBox.Dense"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etPrice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilQuantity"
            android:layout_width="@dimen/padding_none"
            android:layout_height="wrap_content"
            android:layout_weight="50"
            android:layout_marginStart="@dimen/common_padding_min"
            android:hint="@string/hint_quantity"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tilName"
            style="@style/ThemeOverlay.Material3.AutoCompleteTextView.OutlinedBox.Dense"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etQuantity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"/>
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>
    <ImageButton
        android:id="@+id/iBtnAdd"
        android:layout_width="@dimen/padding_none"
        android:layout_height="@dimen/padding_none"
        android:src="@drawable/ic_add_photo"
        android:background="?selectableItemBackground"
        app:layout_constraintStart_toStartOf="@+id/ivImgPreview"
        app:layout_constraintEnd_toEndOf="@+id/ivImgPreview"
        app:layout_constraintTop_toTopOf="@+id/ivImgPreview"
        app:layout_constraintBottom_toBottomOf="@+id/ivImgPreview"
        />
    <ImageView
        android:id="@+id/ivImgPreview"
        android:layout_width="@dimen/padding_none"
        android:layout_height="@dimen/padding_none"
        android:layout_marginTop="@dimen/common_padding_min"
        app:layout_constraintDimensionRatio="16:9"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>
    
<ProgressBar
    android:id="@+id/progressBar"
    android:layout_width="@dimen/padding_none"
    android:layout_height="wrap_content"
    app:layout_constraintStart_toStartOf="@+id/ivImgPreview"
    app:layout_constraintEnd_toEndOf="@+id/ivImgPreview"
    app:layout_constraintTop_toBottomOf="@+id/iBtnAdd"
    app:layout_constraintTop_toTopOf="parent"
    android:visibility="gone"
    tools:visibility="visible"
    tools:progress="75"
    />
    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvProgress"
        android:layout_width="@dimen/padding_none"
        android:layout_height="wrap_content"
        tools:text="Subiendo ... 75%"
        android:gravity="center"
        android:textColor="@color/white"
        android:visibility="gone"
        tools:visibility="visible"
        app:layout_constraintStart_toStartOf="@+id/progressBar"
        app:layout_constraintEnd_toEndOf="@+id/progressBar"
        app:layout_constraintTop_toBottomOf="@+id/progressBar"/>

</androidx.constraintlayout.widget.ConstraintLayout>